# docker-compose-map

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  test.yml
src/docker_compose_map/: __main__.py  cli.py  compose.py  discovery.py  domain.py  mermaid.py  template.py
templates/: compose-graph.md
tests/: conftest.py  test_discovery.py  test_integration.py  test_template.py
tests/assets/discovery/stack/: compose.yaml
tests/assets/discovery/stack/tests/fixture/: compose.yaml
tests/assets/render/: compose-graph.md
tests/assets/render/app/: compose.yaml
tests/assets/render/backup/: compose.yaml
tests/assets/render/monitoring/: compose.yaml
tests/assets/render/proxy/: compose.yaml
tests/assets/render/vpn/: compose.yaml
